fix: profile subscription alignment fix

--- a/src/styles/profile_page/_user-profile.scss
+++ b/src/styles/profile_page/_user-profile.scss
@@ -158,6 +158,9 @@
         text-align: left;
       }
     }
+    .subscription-container {
+      text-align: center;
+    }
     .user-type,
     .user-since {
       color: #6f7283;
